--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="bundle.js"></script>
+        <script src="bundle.js" type="text/javascript"></script>
     </body>
 </html>
